--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "@shopify/react-native-skia": "2.4.7",
     "async-mutex": "^0.5.0",
+    "currency-symbol-map": "^5.1.0",
     "expo": "~54.0.27",
     "expo-apple-authentication": "~8.0.8",
     "expo-blur": "~15.0.8",
@@ -53,6 +54,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.16.0",
