--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@reduxjs/toolkit": "^2.11.0",
     "@shopify/react-native-skia": "2.4.7",
     "async-mutex": "^0.5.0",
+    "currency-codes": "^2.2.0",
     "currency-symbol-map": "^5.1.0",
     "expo": "~54.0.27",
     "expo-apple-authentication": "~8.0.8",
+    "expo-application": "~7.0.8",
     "expo-blur": "~15.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.11",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
